Enforce Java module system in docker container